--- a/step1-profile/index.html
+++ b/step1-profile/index.html
@@ -11,22 +11,28 @@
   <h1>Logo/Identity PROFILE for Katriona Marie Stagg</h1>
 
   <h2>Job Title</h2>
-  <p>What position are you seeking? ANSWER HERE</p>
+  <p>What position are you seeking?</p>
+  <p>Front-End Developer and Designer.</p>
 
   <h2>Concepts</h2>
-  <p>What association do you want people to have when they think of you? ANSWER HERE</p>
+  <p>What association do you want people to have when they think of you?</p>
+  <p>Detail-oriented, loyal, and punctual. Reliable.</p>
 
   <h2>Skill Sets</h2>
-  <p>What skill sets are you looking to promote? ANSWER HERE</p>
+  <p>What skill sets are you looking to promote?</p>
+  <p>Huge sense of details, skilled in UX, and great in problem solving.</p>
 
   <h2>Colors</h2>
-  <p>What colors are you thinking about for your “brand”?  Limit to 2 or 3 colors.  If you need more, write about the reasons. ANSWER HERE</p>
+  <p>What colors are you thinking about for your “brand”?  Limit to 2 or 3 colors.  If you need more, write about the reasons.</p>
+  <p>Tealish green, or cyan in general.</p>
 
   <h2>Graphics</h2>
-  <p>What kind of graphics, images, shapes, or icons will help associate you with the skills, a job, or branding concept? ANSWER HERE</p>
+  <p>What kind of graphics, images, shapes, or icons will help associate you with the skills, a job, or branding concept?</p>
+  <p>Technological advancements, felines (related to my nickname), and Deer (for my last name, Stagg).</p>
 
   <h2>Shape Ideas</h2>
-  <p>What will be the overall “background” shape of your identity mark, if any? Square, Circle, Rectangle…? ANSWER HERE</p>
+  <p>What will be the overall “background” shape of your identity mark, if any? Square, Circle, Rectangle…?</p>
+  <p>Circle or Square. I'm thinking Circle would be best.</p>
 
 
 </body>
